# openai_nespy

./: LICENSE  README.md  setup.cfg
scripts/: mario_rl_play.py  mario_rl_plot.py  mario_rl_train.py
src/mario_rl/: __init__.py
src/mario_rl/learning/: __init__.py  agent.py  dnn.py  memory.py
src/mario_rl/utils/: __init__.py  logging.py  progress.py  wrappers.py
