[metadata]
name = openai_nespy
version = 0.0.1
author = mick
author_email = micklangford@gmail.com
description = Experimental Reinforcement Learning for OpenAI NesPy
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    gym-super-mario-bros
    gym==0.23.1
    matplotlib
    numpy
    opencv-python
    torch
    torchinfo

[option.packages.find]
where = src
include =
    mario_rl*
